--- a/src/components/main.scss
+++ b/src/components/main.scss
@@ -33,6 +33,9 @@
     gap: 40px;
 
 
+    a {
+        color: rgb(175, 175, 45);
+    }
     
 
     i {
